# esp-embassy-book-experiments

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs  main.rs
src/tasks/: mod.rs  uart.rs  wifi.rs
