[package]
edition      = "2021"
name         = "esp-embassy-channels"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "esp-embassy-channels"
path = "./src/main.rs"

[dependencies]
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = ["esp32c6"] }
esp-hal                = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = ["esp32c6", "unstable"] }

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = [ "compat"]}
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1"
embassy-executor = { version = "0.7" }
embassy-time = "0.4"
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = ["esp32c6"] }
esp-radio-preempt-baremetal = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = ["esp32c6"] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = [
  "unstable",
  "esp-alloc",
  "esp32c6",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = "2"
esp-println = { version = "0.15.0", features = ["esp32c6"] }
# embassy-sync = "0.7"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = true
